{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 76,
  "lineage": "1c3da667-5f26-a876-cd32-298961589d00",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Back-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:339713124131:instance/i-0338cad5bd7b00d98",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0338cad5bd7b00d98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d6ec89df65a3daca",
            "private_dns": "ip-10-0-2-83.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-029727e259682c2a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04aa8b87faebe0f6d",
            "tags": {
              "Name": "Back-End"
            },
            "tags_all": {
              "Name": "Back-End"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a018d98a8a75001"
            ]
          },
          "dependencies": [
            "aws_key_pair.Public-key",
            "aws_security_group.Back-End",
            "aws_security_group.Front-End",
            "aws_subnet.Private_subnet",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Front-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e2c8caa4b6378d8c",
            "arn": "arn:aws:ec2:us-east-1:339713124131:instance/i-065f517855877a583",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065f517855877a583",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Public-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0e46528c0b3ecd5",
            "private_dns": "ip-10-0-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "public_ip": "44.202.190.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03a18ecef671c3b72",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017a9b8e8c08476e7",
            "tags": {
              "Name": "Front-End"
            },
            "tags_all": {
              "Name": "Front-End"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02fa7ef7565150521"
            ]
          },
          "dependencies": [
            "aws_key_pair.Public-key",
            "aws_security_group.Front-End",
            "aws_subnet.Public_subnet",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:internet-gateway/igw-01acde280d964e6b7",
            "id": "igw-01acde280d964e6b7",
            "owner_id": "339713124131",
            "tags": {
              "Name": "IGW-Don"
            },
            "tags_all": {
              "Name": "IGW-Don"
            },
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:route-table/rtb-0e41d53687b1280ca",
            "id": "rtb-0e41d53687b1280ca",
            "owner_id": "339713124131",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private_RT"
            },
            "tags_all": {
              "Name": "Private_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:route-table/rtb-0e6c1f6b754c9a113",
            "id": "rtb-0e6c1f6b754c9a113",
            "owner_id": "339713124131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01acde280d964e6b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet-Gateway",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Assoc-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f70c4d12fea0111a",
            "route_table_id": "rtb-0e41d53687b1280ca",
            "subnet_id": "subnet-04aa8b87faebe0f6d"
          },
          "dependencies": [
            "aws_route_table.Private_RT",
            "aws_subnet.Private_subnet",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-Assoc-Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093ed936dfad8df68",
            "route_table_id": "rtb-0e6c1f6b754c9a113",
            "subnet_id": "subnet-017a9b8e8c08476e7"
          },
          "dependencies": [
            "aws_internet_gateway.Internet-Gateway",
            "aws_route_table.Public_RT",
            "aws_subnet.Public_subnet",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Back-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:security-group/sg-00a018d98a8a75001",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a018d98a8a75001",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02fa7ef7565150521"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Back-End",
            "name_prefix": "",
            "owner_id": "339713124131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Back-End"
            },
            "tags_all": {
              "Name": "Back-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Front-End",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Front-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:security-group/sg-02fa7ef7565150521",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fa7ef7565150521",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Front-End",
            "name_prefix": "",
            "owner_id": "339713124131",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Front-End"
            },
            "tags_all": {
              "Name": "Front-End"
            },
            "timeouts": null,
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:subnet/subnet-04aa8b87faebe0f6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04aa8b87faebe0f6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713124131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet"
            },
            "tags_all": {
              "Name": "Private_subnet"
            },
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:subnet/subnet-017a9b8e8c08476e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017a9b8e8c08476e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713124131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet"
            },
            "tags_all": {
              "Name": "Public_subnet"
            },
            "vpc_id": "vpc-058eac909e7bcfb0c"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713124131:vpc/vpc-058eac909e7bcfb0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060d45578f1ee057a",
            "default_route_table_id": "rtb-08b06d261c7b53f27",
            "default_security_group_id": "sg-01becb65343888fba",
            "dhcp_options_id": "dopt-0709e175163ce65a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-058eac909e7bcfb0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08b06d261c7b53f27",
            "owner_id": "339713124131",
            "tags": {
              "Name": "VPC-Terraform"
            },
            "tags_all": {
              "Name": "VPC-Terraform"
            }
          }
        }
      ]
    }
  ]
}